[package]
name = "simulator-shim"
version = "0.1.0"
authors = ["Michael Romashov <mromashov@icloud.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bimap = "0.6.3"
console_error_panic_hook = "0.1.7"
uom = { git = "https://github.com/synapticsim/uom", branch = "master" }
wasm-bindgen = "0.2"

[profile.release]
lto = true
