[package]
name = "simulator-shim"
version = "0.1.0"
authors = ["Michael Romashov <mromashov@icloud.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bimap = "0.6.3"
console_error_panic_hook = "0.1.7"
log = "0.4.6"
once_cell = { version = "1.18.0", features = [] }
uom = { git = "https://github.com/synapticsim/uom", branch = "master" }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
wasm-logger = "0.2.0"
regex = "1.10.2"

[profile.release]
lto = true
opt-level = 3
